# cosmerge

./: .gitignore  README.md  catgen.py  environment.yml  param_dists.py  requirements.txt  sample_cat.ipynb  setup.cfg  setup.py  sfh.py  usample.py  utils.py
cosmerge/: catgen.py  param_dists.py  sfh.py  usample.py  utils.py
cosmerge/cosmerge.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/api/: cosmerge.catgen.Catalog.doctree  cosmerge.param_dists.get_dN_dtlb_dV.doctree  cosmerge.param_dists.get_dN_dtlb_dlnm1_dlnm2_dV.doctree  cosmerge.param_dists.get_dN_dtlb_dlnm_dV.doctree  cosmerge.param_dists.get_dN_dtlb_dlnm_dZ_dV.doctree  cosmerge.param_dists.get_dN_dtlb_dlnm_dq_dV.doctree  cosmerge.param_dists.get_pz.doctree  cosmerge.sfh.log_p_Z_z.doctree  cosmerge.sfh.md_14.doctree  cosmerge.sfh.mean_metal_log_z.doctree  cosmerge.sfh.mf_17.doctree  cosmerge.usample.draw_metallicities_and_redshifts.doctree  cosmerge.usample.generate_universe.doctree  cosmerge.usample.md_zs.doctree  cosmerge.utils.get_cosmic_data.doctree  cosmerge.utils.get_met_bins.doctree  cosmerge.utils.get_z_interp.doctree  cosmerge.utils.parse_kstar.doctree  cosmerge.utils.read_met_data.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_images/: inheritance-58fcc39115a46f41b0582c2e54c3154815622c75.png.map
docs/api/: cosmerge.catgen.Catalog.rst  cosmerge.param_dists.get_dN_dtlb_dV.rst  cosmerge.param_dists.get_dN_dtlb_dlnm1_dlnm2_dV.rst  cosmerge.param_dists.get_dN_dtlb_dlnm_dZ_dV.rst  cosmerge.param_dists.get_dN_dtlb_dlnm_dq_dV.rst  cosmerge.sfh.log_p_Z_z.rst  cosmerge.sfh.md_14.rst  cosmerge.sfh.mean_metal_log_z.rst  cosmerge.sfh.mf_17.rst  cosmerge.usample.draw_metallicities_and_redshifts.rst  cosmerge.usample.generate_universe.rst  cosmerge.usample.md_zs.rst
src/cosmerge/: catgen.py  usample.py  utils.py
(+28 files in other folders)
