[metadata]
name = cosmerge
version = 0.0.1
author = Katie Breivik
author_email = katie.breivik@gmail.com
description = A post-processing package to turn COSMIC data into compact object merger catalogs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/katiebreivik/cosmic-mergers
project_urls =
    Bug Tracker = https://github.com/katiebreivik/cosmic-mergers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
