[metadata]
name = cosmerge
version = 0.0.1
author = Katie Breivik
author_email = katie.breivik@gmail.com
description = A post-processing package to turn COSMIC data into compact object merger catalogs
url = https://github.com/katiebreivik/cosmic-mergers
project_urls =
    Bug Tracker = https://github.com/katiebreivik/cosmic-mergers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = cosmerge 
python_requires = >=3.6

