[metadata]
name = cosmerge
version = 0.0.1
author = Katie Breivik
author_email = katie.breivik@gmail.com
description = A post-processing package to turn COSMIC data into compact object merger catalogs
url = https://github.com/katiebreivik/cosmerge 
project_urls =
    Bug Tracker = https://github.com/katiebreivik/cosmerge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find: 
install_requires = 
    numpy >= 1.16
    astropy >= 4.0
    scipy >= 1.5.0
    matplotlib >= 3.3.2
    seaborn >= 0.11.1
    schwimmbad >= 0.3.2


